integ-tests/tests/snapshots/parser__toml_1_1__escape_combined-2.snap
---
source: integ-tests/tests/parser.rs
expression: spans
---
note[string]: root_test
  ┌─ escape_combined:1:9
  │
1 │ test = "\x00\x1b\e\x61\u0041\U00000042"
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[table]: root
  ┌─ escape_combined:1:1
  │
1 │ test = "\x00\x1b\e\x61\u0041\U00000042"
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
