integ-tests/tests/snapshots/parser__toml_1_1__escape_combined.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "test": "\u0000\u001b\u001baAB"
}
