integ-tests/tests/snapshots/parser__toml_1_1__escape_x.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "null": "\u0000",
  "letter": "a"
}
