integ-tests/tests/snapshots/parser__toml_1_1__inline_table_newlines.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "tbl": {
    "key": "value",
    "nested": {
      "inner": 42
    }
  }
}
