integ-tests/tests/snapshots/parser__toml_1_1__inline_table_with_comments.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "tbl": {
    "key": "value",
    "num": 123
  }
}
